[gd_scene load_steps=5 format=2]

[ext_resource path="res://Enemy/Enemy.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 105.005

[sub_resource type="CircleShape2D" id=2]
radius = 6.0

[sub_resource type="CircleShape2D" id=3]
radius = 43.0

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 3
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.807843, 0.121569, 0.121569, 1 )
position = Vector2( -9.53674e-07, -9.53674e-07 )
scale = Vector2( 0.25, 0.25 )

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="DetectionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 1.3, 1.3 )
shape = SubResource( 2 )

[node name="Line2D" type="Line2D" parent="."]
visible = false
width = 5.0

[node name="HealthBar" type="Node2D" parent="."]
visible = false
scale = Vector2( 0.33, 0.33 )

[node name="ProgressBar" type="ProgressBar" parent="HealthBar"]
margin_left = -39.3939
margin_top = -42.4242
margin_right = 40.6061
margin_bottom = -28.4242
max_value = 4.0
step = 1.0
value = 1.0
percent_visible = false

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )

[connection signal="body_entered" from="DetectionArea" to="." method="_on_DetectionArea_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_DetectionArea_body_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
